# binary-clock-rs

./: .gitignore  Cargo.toml  Embed.toml  README.md  devenv.nix
.cargo/: config.toml
src/: clock.rs  main.rs  net.rs  rtg.rs
