[package]
edition = "2021"
name = "binary-clock-rs"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"

defmt = "1"
defmt-rtt = "1"
fixed = "1.23.1"
fixed-macro = "1.2"

embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
panic-probe = { version = "1", features = ["print-defmt"] }
embassy-rp = { version = "0.4.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "chrono",
    "binary-info",
] }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "task-arena-size-16384",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-futures = { version = "0.1.0" }
embassy-net = { version = "0.7.0", features = [
    "defmt",
    "udp",
    "dhcpv4",
    "dns",
] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }

smart-leds = "0.4.0"
chrono = { version = "0.4.41", default-features = false }
heapless = "0.8"
sntpc = { version = "0.5.2", default-features = false, features = [
    "defmt",
    "embassy-socket",
] }
cyw43 = { version = "0.3.0", features = ["defmt"] }
cyw43-pio = { version = "0.4.0", features = ["defmt"] }
static_cell = "2.1.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }

rp-pac = { version = "7.0.0", path = "../rp-pac", features = ["rp235x"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
rand_core = "0.9.3"
chrono-tz = { version = "0.10.3", default-features = false }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
